--- a/style.scss
+++ b/style.scss
@@ -18,7 +18,7 @@ html {
 }
 
 body {
-	background: #91dde9;
+	background-image: url("http://www.free-largeimages.com/wp-content/uploads/2014/12/Landscape_01.jpg");
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
